--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -11,9 +11,15 @@ updates:
       interval: "weekly"
     assignees:
       - "rhysparry"
+    commit-message:
+      prefix: "chore(deps)"
+      include: "scope"
   - package-ecosystem: "github-actions" # See documentation for possible values
     directory: "/" # Location of package manifests
     schedule:
       interval: "weekly"
     assignees:
       - "rhysparry"
+    commit-message:
+      prefix: "chore(ci)"
+      include: "scope"
