feat(docs): Add XML Documentation
- Include documentation in package
- Treat build warnings as error

Resolves: #3

--- a/Dirt.Env/Dirt.Env.csproj
+++ b/Dirt.Env/Dirt.Env.csproj
@@ -12,6 +12,8 @@
         <PackageReadmeFile>README.md</PackageReadmeFile>
         <PackageLicenseExpression>MIT</PackageLicenseExpression>
         <Copyright>Copyright 2024 Rhys Parry</Copyright>
+        <GenerateDocumentationFile>true</GenerateDocumentationFile>
+        <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
     </PropertyGroup>
 
     <ItemGroup>
