--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -12,7 +12,7 @@ updates:
     assignees:
       - "rhysparry"
     commit-message:
-      prefix: "chore(deps)"
+      prefix: "chore"
       include: "scope"
   - package-ecosystem: "github-actions" # See documentation for possible values
     directory: "/" # Location of package manifests
@@ -21,5 +21,5 @@ updates:
     assignees:
       - "rhysparry"
     commit-message:
-      prefix: "chore(ci)"
+      prefix: "chore"
       include: "scope"
