feat: add FindExecutableInPath extension to IEnv

--- a/Dirt.Env/Dirt.Env.csproj
+++ b/Dirt.Env/Dirt.Env.csproj
@@ -20,4 +20,8 @@
         <None Include="..\README.md" Pack="true" PackagePath="\" />
         <None Include="..\CHANGELOG.md" Pack="true" PackagePath="\" />
     </ItemGroup>
+
+    <ItemGroup>
+      <PackageReference Include="Mono.Posix" Version="7.1.0-final.1.21458.1" />
+    </ItemGroup>
 </Project>
