chore(deps): group test dependency updates

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -14,6 +14,13 @@ updates:
     commit-message:
       prefix: "chore"
       include: "scope"
+    groups:
+      test-dependencies:
+        patterns:
+          - Microsoft.NET.Test.Sdk
+          - xunit
+          - xunit.runner.visualstudio
+          - coverlet.collector
   - package-ecosystem: "github-actions" # See documentation for possible values
     directory: "/" # Location of package manifests
     schedule:
