--- a/cliff.toml
+++ b/cliff.toml
@@ -23,7 +23,7 @@ body = """
     {% for commit in commits %}
         - {{ commit.message | upper_first }}{% for f in commit.footers -%}
         {% if f.token in ["Resolves", "Fixes"] -%}
-        {{ " (" ~ f.token }} [{{ f.value }}](https://github.com/{{ remote.github.owner }}/{{ remote.github.repo }}/issues/{{ f.value | trim_start_matches(pat="#") }}))
+        {{ " (" ~ f.token }} [{{ f.value }}](https://github.com/rhysparry/Dirt.Env/issues/{{ f.value | trim_start_matches(pat="#") }}))
         {%- endif -%}
         {% endfor %}\
     {% endfor %}
@@ -35,11 +35,11 @@ footer = """
     {% if release.version -%}
         {% if release.previous.version -%}
             [{{ release.version | trim_start_matches(pat="v") }}]: \
-                https://github.com/{{ remote.github.owner }}/{{ remote.github.repo }}\
+                https://github.com/rhysparry/Dirt.Env\
                     /compare/{{ release.previous.version }}..{{ release.version }}
         {% endif -%}
     {% else -%}
-        [unreleased]: https://github.com/{{ remote.github.owner }}/{{ remote.github.repo }}\
+        [unreleased]: https://github.com/rhysparry/Dirt.Env\
             /compare/{{ release.previous.version }}..HEAD
     {% endif -%}
 {% endfor %}
@@ -57,6 +57,7 @@ filter_unconventional = true
 split_commits = false
 # regex for parsing and grouping commits
 commit_parsers = [
+  { message = "^chore.release.: release", skip = true },
   { message = "^.*: [Aa]dd", group = "Added" },
   { message = "^.*: [Ss]upport", group = "Added" },
   { message = "^.*: [Rr]emove", group = "Removed" },
@@ -65,6 +66,10 @@ commit_parsers = [
   { message = "^fix", group = "Fixed" },
   { message = "^.*: [Ff]ix", group = "Fixed" },
   { message = "^.*", group = "Changed" },
+]
+# Pre-process commits
+commit_preprocessors = [
+  { pattern = "\\(#(\\d+)\\)", replace = "([#$1](https://github.com/rhysparry/Dirt.Env/pull/$1))" }
 ]
 # protect breaking changes from being skipped due to matching a skipping commit_parser
 protect_breaking_commits = false
