--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -30,3 +30,17 @@ updates:
     commit-message:
       prefix: "chore"
       include: "scope"
+  - package-ecosystem: "dotnet-sdk"
+    directory: "/"
+    schedule:
+      interval: "weekly"
+      day: "wednesday"
+    ignore:
+      - dependency-name: "*"
+        update-types:
+          - "version-update:semver-major"
+    assignees:
+      - "rhysparry"
+    commit-message:
+      prefix: "chore"
+      include: "scope"
